--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </div>
     <div id="protectedContent" class="protected-content" style="display:none;">
     <div id="wrapper">
-        <nav class="navbar align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark">
+        <nav style="background: #000000;" class="navbar align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark">
             <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
-                    <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-laugh-wink"></i></div>
-                    <div class="sidebar-brand-text mx-3"><span>HydroGENIUS</span></div>
+                    <div class="sidebar-brand-icon"><img src="assets/img/047f54_8858bbf147bd4a17b9b24145a7e38668~mv2_d_3508_2480_s_4_2.webp" width="190" height="62"></div>
+                    <div class="sidebar-brand-text mx-3"></div>
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="navbar-nav text-light" id="accordionSidebar">
@@ -42,7 +42,7 @@
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
-                <nav class="navbar navbar-expand bg-white shadow mb-4 topbar">
+                <nav style="background: #00BFFF;" class="navbar navbar-expand shadow mb-4 topbar">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
                         <ul class="navbar-nav flex-nowrap ms-auto">
                             <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-search"></i></a>
@@ -54,7 +54,7 @@
                             </li>
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">Alexy Roman (H3D Airport)</span><i class="far fa-user"></i></a>
+                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span style="color: #ffffff;" class="d-none d-lg-inline me-2 small">Alexy Roman (H3D Airport)</span><i style="color: #ffffff;" class="far fa-user"></i></a>
                                     <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
                                         <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
                                     </div>
@@ -65,7 +65,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h1 class="text-dark mb-0" style="font-weight: bold;">Dashboard</h1><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="#"><i class="fas fa-download fa-sm text-white-50"></i>&nbsp;Generate Report</a>
+                        <h1 class="text-dark mb-0" style="font-weight: bold;">Dashboard</h1><a style="background: #00BFFF;border-color: #00BFFF;" class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="#"><i class="fas fa-download fa-sm text-white-50"></i>&nbsp;Generate Report</a>
                     </div>
                     <hr>
                     <div class="row">
@@ -79,7 +79,7 @@
                                 <div class="card-body">
                                     <div class="row g-0 align-items-center">
                                         <div class="col me-2">
-                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Airport Data</span></div>
+                                            <div class="text-uppercase text-primary fw-bold text-xs mb-1"><p style="color:#00BFFF; font-weight:bold; font-size: 18px;">Airport Data</p></div>
                                             <form id="inputForm">
                                                 <select class="form-select" required="" style="width: 50%;margin-bottom: 12px;margin-top: 12px;" id="airportCountry" name="airportCountry">
                                                     <option value="France">France</option>
@@ -101,7 +101,7 @@
                                                 <label for="REPfleet">GPU Fleet Replacement Target:</label>
                                                 <input class="form-control" type="number" step="0.01" id="REPfleet" name="REPfleet" value="0.6" style="width: 50%;margin-bottom: 12px;" placeholder="GPU Fleet Replacement Target" min="0" max="1">
                                                 
-                                                <button class="btn btn-primary" type="button" onclick="computeModel()">Compute</button>
+                                                <button style="background: #00BFFF;border-color: #00BFFF;" class="btn btn-primary" type="button" onclick="computeModel()">Compute</button>
                                             </form>
                                         </div>
                                     </div>
@@ -124,7 +124,7 @@
                                         <div class="col me-2">
                                             <div class="card shadow mb-4">
                                                 <div class="card-header py-3">
-                                                    <h6 class="text-info fw-bold m-0">Financial Results</h6>
+                                                    <h6 style="color:#00BFFF; font-weight:bold" class="fw-bold m-0">Financial Results</h6>
                                                 </div>
                                                 <div class="card-body">
                                                     <div class="table-responsive">
@@ -200,7 +200,7 @@
                             <h1>Shape Explorer</h1>
                             <div class="row">
                                 <div class="col-lg-6 mb-4">
-                                    <div class="card text-white bg-primary shadow">
+                                    <div style="background-color: #00bbff" class="card text-white shadow">
                                         <div class="card-body">
                                             <p class="m-0">Electrolyser</p>
                                             <p class="text-white-50 small m-0"></p>
@@ -208,7 +208,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 mb-4">
-                                    <div class="card text-white bg-success shadow">
+                                    <div style="background-color: #00bbff" class="card text-white shadow">
                                         <div class="card-body">
                                             <p class="m-0">GPU</p>
                                             <p class="text-white-50 small m-0"></p>
