--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
+    <script src="src/js/L.Path.Transform.js"></script>
+    <script src="src/js//Edit.Rectangle.Rotate.js"></script>
+    <style>
+        .leaflet-edit-marker-selected {
+            background-color: none!important;
+            border: none!important;
+            height:0%!important;
+        }
+    </style>
 </head>
 
 <body id="page-top">
-     <div id="loginContainer" class="login-container">
+     <!-- <div id="loginContainer" class="login-container">
         <h2>Login</h2>
         <form id="loginForm">
             <label for="username">Username:</label>
@@ -22,8 +35,8 @@
             <button type="submit">Login</button>
         </form>
         <p id="errorMessage" class="error-message"></p>
-    </div>
-    <div id="protectedContent" class="protected-content" style="display:none;">
+    </div> -->
+    <!-- <div id="protectedContent" class="protected-content" style="display:none;"> -->
     <div id="wrapper">
         <nav style="background: #000000;" class="navbar align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark">
             <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
@@ -189,31 +202,13 @@
                     <hr>
                     <div class="row d-flex align-items-center">
                         <div class="col mb-4">
+                            <h2>Space occupied by electrolysers</h2>
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
                                     <h6 class="text-primary fw-bold m-0">Map</h6>
                                 </div>
-                                <div class="card-body"><iframe allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed/v1/view?key=AIzaSyAd0ysiVe74cz8nnI3dwexx4rk_nw5utPo&amp;center=43.628270%2C1.368770&amp;zoom=13&amp;maptype=satellite" width="100%" height="400"></iframe></div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <h1>Shape Explorer</h1>
-                            <div class="row">
-                                <div class="col-lg-6 mb-4">
-                                    <div style="background-color: #00bbff" class="card text-white shadow">
-                                        <div class="card-body">
-                                            <p class="m-0">Electrolyser</p>
-                                            <p class="text-white-50 small m-0"></p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 mb-4">
-                                    <div style="background-color: #00bbff" class="card text-white shadow">
-                                        <div class="card-body">
-                                            <p class="m-0">GPU</p>
-                                            <p class="text-white-50 small m-0"></p>
-                                        </div>
-                                    </div>
+                                <div class="card-body">
+                                    <div id="map" style="width: 100%; height: 800px;"></div>
                                 </div>
                             </div>
                         </div>
@@ -227,11 +222,11 @@
             </footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
-    </div>
+    <!-- </div> -->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="scripts.js"></script>
-    <script src="login.js"></script>
+    <!-- <script src="login.js"></script> -->
     </script>
 </body>
 
