--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body id="page-top">
-     <!-- <div id="loginContainer" class="login-container">
+     <div id="loginContainer" class="login-container">
         <h2>Login</h2>
         <form id="loginForm">
             <label for="username">Username:</label>
@@ -35,8 +35,8 @@
             <button type="submit">Login</button>
         </form>
         <p id="errorMessage" class="error-message"></p>
-    </div> -->
-    <!-- <div id="protectedContent" class="protected-content" style="display:none;"> -->
+    </div>
+    <div id="protectedContent" class="protected-content" style="display:none;">
     <div id="wrapper">
         <nav style="background: #000000;" class="navbar align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark">
             <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
@@ -222,11 +222,11 @@
             </footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
-    <!-- </div> -->
+    </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="scripts.js"></script>
-    <!-- <script src="login.js"></script> -->
+    <script src="login.js"></script>
     </script>
 </body>
 
