--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
     <script src="src/js/L.Path.Transform.js"></script>
@@ -23,7 +25,7 @@
 </head>
 
 <body id="page-top">
-     <div id="loginContainer" class="login-container">
+     <!-- <div id="loginContainer" class="login-container">
         <h2>Login</h2>
         <form id="loginForm">
             <label for="username">Username:</label>
@@ -33,8 +35,8 @@
             <button type="submit">Login</button>
         </form>
         <p id="errorMessage" class="error-message"></p>
-    </div>
-    <div id="protectedContent" class="protected-content" style="display:none;">
+    </div> -->
+    <!-- <div id="protectedContent" class="protected-content" style="display:none;"> -->
     <div id="wrapper">
         <nav style="background: #000000;" class="navbar align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark">
             <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
@@ -220,11 +222,11 @@
             </footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
-    </div>
+    <!-- </div> -->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="scripts.js"></script>
-    <script src="login.js"></script>
+    <!-- <script src="login.js"></script> -->
     </script>
 </body>
 
