--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="row d-flex align-items-center" style="margin-top: 12px;margin-bottom: 24px;">
-                        <div class="col">
+                        <div class="col-4">
                             <div class="card shadow border-left-primary py-2">
                                 <div class="card-body">
                                     <div class="row g-0 align-items-center">
